<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/shoppingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_paper_line"
        android:title="Shopping Lists" />
    <item
        android:id="@+id/homeInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_home_line"
        android:title="Home Inventory" />
    <item
        android:id="@+id/userRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_request_line"
        android:title="User Requests" />
    <item
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_search_line"
        android:title="Search" />
</menu>
